--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,4 +1,4 @@
-body{
+/* body{
 background: linear-gradient(135deg, #12c2e9, #c471ed, #f64f59);
 }
 .container {
@@ -31,4 +31,4 @@ button {
 p {
   font-size: 12px;
   color: #666;
-}
+} */
